@@ -1,3 +1,7 @@
+2009-02-06 Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Makefile.am: Fix distcheck.
+
 2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* NUnitRunner.mdp:
